Remove import-once functionality, change global.scss to import once on its own

--- a/scss/foundation/_functions.scss
+++ b/scss/foundation/_functions.scss
@@ -9,10 +9,12 @@ $rem-base: 16px !default;
 // We use this to prevent styles from being loaded multiple times for compenents that rely on other components. 
 $modules: () !default;
 @mixin exports($name) {
-  @if(not index($modules, $name)) {
-    $modules: append($modules, $name) !global;
-    @content;
-  }
+  // @if(not index($modules, $name)) {
+  //   $modules: append($modules, $name) !global;
+  //   @content;
+  // }
+  // Import-once functionality is being disabled for now to maintain Sass 3.2/libsass compatibility.
+  @content;
 }
 
 //
