--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -15,7 +15,7 @@
   // "foundation/components/forms",
   // "foundation/components/custom-forms",
   "foundation/components/button-groups",
-  "foundation/components/dropdown-buttons",
+  // "foundation/components/dropdown-buttons",
   "foundation/components/split-buttons",
   // "foundation/components/flex-video",
   "foundation/components/section",
