--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -8,30 +8,32 @@
 @import
   "foundation/components/global",
   "foundation/components/grid",
+  // other than show-for-small and hide-for-small
+  // visibility can be chopped when Deals die
   "foundation/components/visibility",
-  "foundation/components/block-grid",
-  "foundation/components/type",
   "foundation/components/buttons",
-  "foundation/components/button-groups",
-  "foundation/components/split-buttons",
-  "foundation/components/section",
   "foundation/components/orbit",
   "foundation/components/reveal",
-  "foundation/components/clearing",
-  "foundation/components/breadcrumbs",
-  "foundation/components/keystrokes",
-  "foundation/components/labels",
-  "foundation/components/inline-lists",
-  "foundation/components/pagination",
-  "foundation/components/panels",
-  "foundation/components/side-nav",
-  "foundation/components/sub-nav",
-  "foundation/components/switch",
-  "foundation/components/magellan",
-  "foundation/components/thumbs";
-  // "foundation/components/tooltips",
+  "foundation/components/tooltips",
+  "foundation/components/forms";
+  // "foundation/components/clearing",
+  // "foundation/components/section",
+  // "foundation/components/keystrokes",
+  // "foundation/components/pagination",
+  // "foundation/components/inline-lists",
+  // "foundation/components/button-groups",
+  // "foundation/components/panels",
+  // "foundation/components/switch",
+  // "foundation/components/sub-nav",
+  // "foundation/components/block-grid",
+  // "foundation/components/split-buttons",
+  // "foundation/components/side-nav",
+  // "foundation/components/thumbs",
+  // "foundation/components/labels",
+  // "foundation/components/breadcrumbs",
+  // "foundation/components/magellan",
+  // "foundation/components/type",
   // "foundation/components/dropdown";
-  // "foundation/components/forms",
   // "foundation/components/custom-forms",
   // "foundation/components/dropdown-buttons",
   // "foundation/components/flex-video",
